--- a/Michelles_Portfolio/index.html
+++ b/Michelles_Portfolio/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>Michelle's Project Portfolio</title>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel = "stylesheet" href= "index.css"/>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class = "section"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
